--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,58 @@ node_modules/
 tmp/
 temp/
 hooks/
-platforms/
+
+# Platform specific files that need to be tracked.
+# Keep the original platforms/ directory tracked ...
+
+# platforms/
+
+platforms/*
+
+# ... with the exception for
+
+# iOS
+# ---
+# CDVViewController.m
+
+# Android
+# -------
+# AndroidManifest.xml
+# themes.xml
+# preview_window.xml
+
+# iOS
+!platforms/ios
+platforms/ios/*
+
+!platforms/ios/CordovaLib
+platforms/ios/CordovaLib/*
+
+!platforms/ios/CordovaLib/Classes
+platforms/ios/CordovaLib/Classes/*
+
+!platforms/ios/CordovaLib/Classes/Public
+platforms/ios/CordovaLib/Classes/Public/*
+!platforms/ios/CordovaLib/Classes/Public/CDVViewController.m
+
+# Android
+!platforms/android
+platforms/android/*
+!platforms/android/AndroidManifest.xml
+
+!platforms/android/res
+platforms/android/res/*
+
+!platforms/android/res/values
+platforms/android/res/values/*
+!platforms/android/res/values/themes.xml
+
+!platforms/android/res/drawable
+platforms/android/res/drawable/*
+!platforms/android/res/drawable/preview_window.xml
+
+# End of platform specific files that are tracked.
+
 plugins/
 plugins/android.json
 plugins/ios.json
